stack/media/qbittorrent/qbittorrent-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  # namespace: traefik
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`qbittorrent.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: qbittorrent
          namespace: default
          port: 8080
